k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-auth-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: jwt-auth-api

  template:
    metadata:
      labels:
        app: jwt-auth-api

    spec:
      containers:
        - name: jwt-auth-api
          image: ajimafabian/jwt-auth-api:latest

          ports:
            - containerPort: 3000

          # HEALTH CHECKS (VERY IMPORTANT FOR RECRUITERS)
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
