k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jwt-auth-service

spec:
  selector:
    app: jwt-auth-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
